fixed the width on mobile view

--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ padding-right:4rem;
   border-bottom: 5px solid var(--treedom2);
  }
  #welcome-section{
+  width:100%;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -238,11 +239,13 @@ padding-right:4rem;
   padding-top:6rem;
  }
  .container-about{
+  width:100%;
   display:flex;
   flex-wrap:wrap;
   gap:15px;
  }
  #main-footer{
+  width:100%;
   display:flex;
   flex-wrap: wrap;
   gap:15px;
